--- a/src/components/CarContent.module.css
+++ b/src/components/CarContent.module.css
@@ -38,6 +38,9 @@ button {
     z-index: 10;
     margin-bottom: 50px;
 }
+.dragDropContainer button {
+    margin-bottom: 50px;
+}
 .form {
     display: flex;
     flex-direction: column;
